# dbframe

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
scripts/: build_and_install.bat  development_test.bat  post_install_test.bat
src/dbframe/: __init__.py  base_handler.py  clause.py  dbframe.py  dtype.py  logger.py  operator.py  pg.py  pg_handler.py  pgsql.py  sqlite.py  sqlite_handler.py  types.py  utils.py  validator.py
src/dbframe/handlers/: postgres_handler.py  sqlite_handler.py
test/: test_clause.py  test_dtype.py  test_operator.py  test_pg.py  test_pgsql.py  test_sqlite.py  test_validator.py
tests/: test_dbframe.py  test_logger.py  test_pg_handler.py  test_sqlite_handler.py  test_sqlite_handler_v2.py  test_utils.py
